umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_k5.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 10
    topology: "D~{"
    atoms:
      - "{Cv4}"
      - "{Cv4}"
      - "{Cv4}"
      - "{Cv4}"
      - "{Cv4}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 10
    topology: "D~{"
    atoms:
      - "{Cv4}"
      - "{Cv4}"
      - "{Cv4}"
      - "{Cv4}"
      - "{Cv4}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
