umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_neopentane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#v4" "1" "C#h3#v" "2" "C#h3#v" "3" "C#h3#v" "4" "C#h3#v"} :bonds [["0" "1" "1"] ["0" "2" "1"] ["0" "3" "1"] ["0" "4" "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#v4" "1" "C#h3#v" "2" "C#h3#v" "3" "C#h3#v" "4" "C#h3#v"} :bonds [["0" "1" "1"] ["0" "2" "1"] ["0" "3" "1"] ["0" "4" "1"]] :charge 0 :spin "#u0 #s1"}}}
