umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_norbornane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 7
    bond_count: 8
    topology: FwGPW
    atoms:
      - "{CHv3}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CHv3}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 7
    bond_count: 8
    topology: FwGPW
    atoms:
      - "{CHv3}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CHv3}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
