umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_penta-1,4-diene.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DaS
    atoms:
      - "{CH2v2}"
      - "{CH1v3}"
      - "{CH2v2}"
      - "{CH1v3}"
      - "{CH2v2}"
    bonds:
      - "="
      - "-"
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DaS
    atoms:
      - "{CH2v2}"
      - "{CH1v3}"
      - "{CH2v2}"
      - "{CH1v3}"
      - "{CH2v2}"
    bonds:
      - "="
      - "-"
      - "-"
      - "="
