umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_pentane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DaS
    atoms:
      - "C#h3#v"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h3#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DaS
    atoms:
      - "C#h3#v"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h3#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
