umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_prismane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 6
    bond_count: 9
    topology: ExPw
    atoms:
      - "C#h#v3"
      - "C#h#v3"
      - "C#h#v3"
      - "C#h#v3"
      - "C#h#v3"
      - "C#h#v3"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 9
    topology: ExPw
    atoms:
      - "C#h#v3"
      - "C#h#v3"
      - "C#h#v3"
      - "C#h#v3"
      - "C#h#v3"
      - "C#h#v3"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
