umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_propene.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bg
    atoms:
      - "{CH2v2}"
      - "{CH1v3}"
      - "{CH3v1}"
    bonds:
      - "="
      - "-"
counts:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bg
    atoms:
      - "{CH2v2}"
      - "{CH1v3}"
      - "{CH3v1}"
    bonds:
      - "="
      - "-"
