umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_spiroheptane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 7
    bond_count: 8
    topology: "F{CPO"
    atoms:
      - "{Cv4}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 7
    bond_count: 8
    topology: "F{CPO"
    atoms:
      - "{Cv4}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
